# scribble_io

./: .env  neon_setup.sql  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/core/: config.py  connection_manager.py  security.py
app/db/: database.py
app/game/: __init__.py  game_room.py  scoring.py  state.py  word_bank.py
app/models/: room.py  user.py
app/routes/: __init__.py  auth.py  ws.py
app/schemas/: user.py
app/services/: disconnect_timer_service.py  room_manager.py
frontend/: index.html  package-lock.json  stitch_design.html  vite.config.js
frontend/src/: App.css  App.jsx  Canvas.jsx  Landing.css  Landing.jsx  index.css  main.jsx
frontend/src/assets/: drawer_view_code.html  guesser_view_code.html
